fixed tasks index table description alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,6 +80,12 @@
   margin-bottom: 2%;
 }
 
+// tasks
+
+.tasks-td-top-buffer {
+  margin-top: 8px;
+}
+
 // footer
 
 hr {
